<resources>
    <string name="app_name">Chat Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="h_first_name">Имя</string>
    <string name="h_last_name">Фамилия</string>
    <string name="h_about">О себе</string>
    <string name="h_repository">Репозиторий</string>
    <string name="st_rating">Рейтинг</string>
    <string name="st_respect">Уважение</string>
    <string name="st_0">0</string>
</resources>
