<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_bg" />

    <ImageView
        android:id="@+id/btn_switch_theme"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_round_bg"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_brightness_high_black_24dp" />

    <ImageView
        android:id="@+id/btn_edit"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_round_bg"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_edit_black_24dp"
         />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/avatar_round_size"
        android:layout_height="@dimen/avatar_round_size"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/avatar_default" />

    <TextView
        android:id="@+id/tv_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_gray_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="John Dow" />

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_gray_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Junior Android developer" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@color/color_primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/color_gray"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:text="@string/st_0"
        android:textColor="@color/color_gray_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:text="@string/st_rating"
        android:textColor="@color/color_gray_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:text="@string/st_respect"
        android:textColor="@color/color_gray_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_respect"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_respect" />

    <TextView
        android:id="@+id/tv_respect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:text="@string/st_0"
        android:textColor="@color/color_gray_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_respect"
        app:layout_constraintEnd_toStartOf="@+id/tv_respect"
        app:layout_constraintTop_toTopOf="@+id/tv_respect"
        app:srcCompat="@drawable/ic_respect_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
        app:layout_constraintEnd_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_rating"
        app:srcCompat="@drawable/ic_sp_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_first_name"
            tools:text="John" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_last_name"
            tools:text="Dow" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/ic_about" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_about"
            tools:text="Что-то о себе" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wr_about" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/ic_repo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_repository"
            tools:text="https://github.com/TVladimirG" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/wr_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wr_repository"
        app:layout_constraintTop_toTopOf="@+id/wr_repository"
        app:srcCompat="@drawable/ic_eye_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>